adds first iteration of site layout

--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+	   <link href="css/hover-min.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Share+Tech" rel="stylesheet">
+	<meta charset="UTF-8">
+	<title>Jon's Portfolio</title>
+</head>
+
+<body>
+<!-- adding full screen video -->
+<div class="fullscreen-bg">
+    <video loop muted autoplay poster="img/videoframe.jpg" class="fullscreen-bg__video">
+        <source src="videos/aurora.mp4" type="video/webm">
+    </video>
+</div>
+
+<!-- page content begins -->
+	<header>
+		<h2 id="myname">Jonathan Grunewald</h2>
+		<h2 id="mytitle">Web Developer/Tech Enthusiast</h2>
+	</header>
+
+	<main>
+		
+		<div id="row1">
+			<div class="pagename" id="aboutme"><h3>About Me</h3></div>
+			<div class="pagename" id="work"><h3>Work Experience</h3></div>
+			<div class="pagename" id="websites"><h3>Website Samples</h3></div>
+		</div>
+		<div id="row2">	
+			<div class="pagename" id="contact"><h3>Contact</h3></div>
+			<div class="pagename" id="lorem"><h3>#</h3></div>
+			<div class="pagename" id="lorem2"><h3>#</h3></div>
+		</div>
+	</main>
+	
+	<footer>
+		<div id='footerdiv'>
+			<a href="#"><img class="social-media-img hvr-grow" src="images/logos/facebook-logo.png" alt="facbook icon"></a>
+			<a href="#"><img class="social-media-img hvr-grow" src="images/logos/linkedin-logo.png" alt="linkedin-logo icon"></a>
+			<a href="#"><img class="social-media-img hvr-grow" src="images/logos/spotify-logo.png" alt="spotify icon"></a>
+			<a href="#"><img class="social-media-img hvr-grow" src="images/logos/twitter-social-logotype.png" alt="twitter icon"></a>
+		</div>
+	</footer>	
+
+</body>
+
+</html>
