add mobile backgrond image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <!-- adding full screen video -->
 <div class="fullscreen-bg">
-    <video loop muted autoplay poster="img/videoframe.jpg" class="fullscreen-bg__video">
+    <video loop muted autoplay poster="images/aurora.png" class="fullscreen-bg__video">
         <source src="videos/aurora.mp4" type="video/webm">
     </video>
 </div>
