adds some additional touches

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 	
 	<footer>
 		<div id='footerdiv'>
-			<a href="#"><img class="social-media-img hvr-grow" src="images/logos/facebook-logo.png" alt="facbook icon"></a>
-			<a href="#"><img class="social-media-img hvr-grow" src="images/logos/linkedin-logo.png" alt="linkedin-logo icon"></a>
-			<a href="#"><img class="social-media-img hvr-grow" src="images/logos/spotify-logo.png" alt="spotify icon"></a>
-			<a href="#"><img class="social-media-img hvr-grow" src="images/logos/twitter-social-logotype.png" alt="twitter icon"></a>
+			<a href="https://www.facebook.com/jon.grunewald"><img class="social-media-img hvr-grow" src="images/logos/facebook-logo.png" alt="facbook icon"></a>
+			<a href="https://www.linkedin.com/in/jonathan-grunewald-55838243"><img class="social-media-img hvr-grow" src="images/logos/linkedin-logo.png" alt="linkedin-logo icon"></a>
+			<a href="#"><img class="social-media-img hvr-grow" src="images/logos/mail.png" alt="spotify icon"></a>
+			<a href="https://twitter.com/J_Grune"><img class="social-media-img hvr-grow" src="images/logos/twitter-social-logotype.png" alt="twitter icon"></a>
 		</div>
 	</footer>	
 
