updates web fonts

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	   <link href="css/hover-min.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Share+Tech" rel="stylesheet">
+	<!-- <link href="https://fonts.googleapis.com/css?family=Share+Tech" rel="stylesheet"> -->
+	<link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
 	<meta charset="UTF-8">
 	<title>Jon's Portfolio</title>
 </head>
@@ -40,7 +41,7 @@
 		<div id='footerdiv'>
 			<a href="https://www.facebook.com/jon.grunewald"><img class="social-media-img hvr-grow" src="images/logos/facebook-logo.png" alt="facbook icon"></a>
 			<a href="https://www.linkedin.com/in/jonathan-grunewald-55838243"><img class="social-media-img hvr-grow" src="images/logos/linkedin-logo.png" alt="linkedin-logo icon"></a>
-			<a href="#"><img class="social-media-img hvr-grow" src="images/logos/mail.png" alt="spotify icon"></a>
+			<a href="mailto:jonathan.grunewald1@gmail.com"><img class="social-media-img hvr-grow" src="images/logos/mail.png" alt="spotify icon"></a>
 			<a href="https://twitter.com/J_Grune"><img class="social-media-img hvr-grow" src="images/logos/twitter-social-logotype.png" alt="twitter icon"></a>
 		</div>
 	</footer>	
