--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </video>
 </div>
 
-<!-- page content begins -->
+<!-- page content begins! -->
 	<header>
 		<h2 id="myname">Jonathan Grunewald</h2>
 		<h2 id="mytitle">Web Developer/Tech Enthusiast</h2>
