deleted one line (test)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	   <link href="css/hover-min.css" rel="stylesheet">
-	<!-- <link href="https://fonts.googleapis.com/css?family=Share+Tech" rel="stylesheet"> -->
 	<link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
 	<meta charset="UTF-8">
 	<title>Jon's Portfolio</title>
@@ -17,7 +16,7 @@
     </video>
 </div>
 
-<!-- page content begins -->
+<!-- page content begins! -->
 	<header>
 		<h2 id="myname">Jonathan Grunewald</h2>
 		<h2 id="mytitle">Web Developer/Tech Enthusiast</h2>
