adds additional design touches

--- a/index.html
+++ b/index.html
@@ -17,22 +17,23 @@
 </div>
 
 <!-- page content begins! -->
+
 	<header>
 		<h2 id="myname">Jonathan Grunewald</h2>
-		<h2 id="mytitle">Web Developer/Tech Enthusiast</h2>
+		<div class="pagename" id="headshot"></div>
+		<h2 id="mytitle">Developer/Tech Enthusiast</h2>
 	</header>
+
 
 	<main>
 		
 		<div id="row1">
 			<div class="pagename" id="aboutme"><h3>About Me</h3></div>
 			<div class="pagename" id="work"><h3>Work Experience</h3></div>
-			<div class="pagename" id="websites"><h3>Website Samples</h3></div>
 		</div>
 		<div id="row2">	
 			<div class="pagename" id="contact"><h3>Contact</h3></div>
-			<div class="pagename" id="lorem"><h3>#</h3></div>
-			<div class="pagename" id="lorem2"><h3>#</h3></div>
+			<div class="pagename" id="websites"><h3>Website Samples</h3></div>
 		</div>
 	</main>
 <!-- footer begins -->
