--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<!-- adding full screen video -->
+<!-- adding full screen video! -->
 <div class="fullscreen-bg">
     <video loop muted autoplay poster="images/aurora.png" class="fullscreen-bg__video">
         <source src="videos/aurora.mp4" type="video/webm">
